src/components/dataTable/dataTable.scss
.dataTable {

    .dataGrid {
        background: white;
        padding: 20px;

        // Reverse default flex direction of toolbar container to swap Search and Export buttons
        .MuiDataGrid-toolbarContainer {
            flex-direction: row-reverse;
        }

        .MuiDataGrid-cell.MuiDataGrid-cell--textLeft {
            display: flex;
            align-items: center;
        }
    
        img {
                    width: 32px;
                    height: 32px;
                    border-radius: 50%;
                    object-fit: cover;
                }
    }
}

